feat(core): capture committed realtime state with bounded asynchronous snapshots